<resources>
    <string name="app_name">Movies Manager</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title_user">Usuario</string>
    <string name="nav_header_subtitle_email">Correo</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_busqueda">Búsqueda</string>
    <string name="menu_recomendaciones">Recomendaciones</string>
    <string name="menu_favoritas">Favoritas</string>
    <string name="menu_ver_mas_tarde">Ver más tarde</string>
    <string name="menu_ya_vistas">Ya vistas</string>
    <string name="menu_configuracion">Configuración</string>
    <string name="menu_detalle">Detalle</string>
    <string name="menu_slideshow">Slideshow</string>

    <string-array name="orden">
        <item>" "</item>
        <item>Ascendente (A-Z)</item>
        <item>Descendente (Z-A)</item>
        <item>Menor duración</item>
        <item>Mayor duración</item>
        <item>Más reciente</item>
        <item>Más antigua</item>
    </string-array>

    <string-array name="generos">
        <item>""</item>
        <item>Acción</item>
        <item>Aventura</item>
        <item>Animación</item>
        <item>Comedia</item>
        <item>Crimen</item>
        <item>Documental</item>
        <item>Drama</item>
        <item>Familia</item>
        <item>Fantasía</item>
        <item>Historia</item>
        <item>Terror</item>
        <item>Música</item>
        <item>Misterio</item>
        <item>Romance</item>
        <item>Ciencia ficción</item>
        <item>Suspense</item>
        <item>Bélica</item>
        <item>Western</item>
    </string-array>

    <string name="bt_BusquedaBuscar">Buscar</string>

    <string name="tv_ReviewNombrePelicula">Nombre película</string>
    <string name="tv_ReviewOpinionesComentarios">Opiniones y Comentarios</string>
    <string name="tvHint_ReviewIngresarReview">Ingresar review</string>
    <string name="bt_ReviewCancelar">Cancelar</string>
    <string name="bt_ReviewGuardar">Guardar</string>
    <string name="bt_ReviewLimpiar">Limpiar</string>
    <string name="bt_ReviewADNo">No</string>
    <string name="bt_ReviewADSi">Si</string>
    <string name="tv_ReviewADCancelarTitulo">Cancelar</string>
    <string name="tv_ReviewADCancelarMensaje">Se perderán los cambios no guardados, ¿está seguro de que desea cancelar?</string>
    <string name="tv_ReviewADLimpiarTitulo">Limpiar</string>
    <string name="tv_ReviewADLimpiarMensaje">La review actual se borrará, ¿está seguro de que desea continuar?</string>

    <string name="tv_ListPeliculasNombrePelicula">Nombre de la película</string>
    <string name="tv_ListPeliculasAnio">Año</string>

    <string name="tv_DetalleNombrePelicula">Nombre película</string>
    <string name="tv_DetalleDirector">Director: </string>
    <string name="tv_DetalleGenero">Género: </string>
    <string name="tv_DetalleDuracion">Duración: </string>
    <string name="tv_DetalleFechaEstreno">Fecha de estreno: </string>

    <string name="tv_InicioFavoritas">Favoritas</string>
    <string name="tv_InicioVerMasTarde">Ver más tarde</string>
    <string name="bt_InicioYaVistas">Ya vistas</string>
    <string name="bt_InicioRecoms">Recomendaciones</string>

    <string name="tv_RecomsDirector">Director: </string>
    <string name="tv_RecomsGenero">Género: </string>
    <string name="tv_RecomsAnioEstreno">Año de Estreno: </string>
    <string name="bt_RecomsBuscar">Buscar</string>
    <string name="tv_RecomsValoracion">Valoración: </string>

    <string name="tv_Orden">Orden: </string>

    <string name="tv_ConfigCambio">Perfil de Usuario</string>
    <string name="tv_ConfigIntro">Seleccione el atributo que desea modificar</string>
    <string name="tv_ConfigUsuario">Nombre</string>
    <string name="tv_ConfigCorreo">Correo</string>
    <string name="tv_ConfigFotoPerfil">Foto de perfil</string>

    <string name="ad_ConfigUsuarioTitulo">Ingrese el nuevo nombre</string>
    <string name="ad_ConfigUsuario">Usuario</string>
    <string name="ad_ConfigAceptar">Aceptar</string>
    <string name="ad_ConfigCancelar">Cancelar</string>
    <string name="ad_ConfigCorreoTitulo">Ingrese la nueva dirección</string>
    <string name="ad_ConfigCorreo">Correo</string>

    <string name="ad_ConfigPermisosTitulo">Se necesitan permisos</string>
    <string name="ad_ConfigPermisosAdvertencia">Advertencia: si éstos no se conceden, no podrá acceder a la galería</string>
    <string name="ad_ConfigPermisosConceder">Conceder</string>
    <string name="ad_ConfigPermisosIgnorar">Ignorar</string>
</resources>