<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/color_drawer"
    android:layout_marginTop="@dimen/header_layoutMarginTop"
    android:gravity="bottom"
    android:orientation="vertical"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circleImageViewNavHeader"
        android:layout_width="@dimen/header_ImageViewWidthHeigh"
        android:layout_height="@dimen/header_ImageViewWidthHeigh"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/header_separacionImagen"
        android:contentDescription="@string/nav_header_desc"
        android:src="@drawable/ic_launcher_foreground"
        app:civ_border_color="@color/black"
        app:civ_border_width="@dimen/header_circleBorderWidth"/>

    <TextView
        android:id="@+id/textViewNavHeaderUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/header_separacionTextos"
        android:gravity="center"
        android:text="@string/nav_header_title_user"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/textViewNavHeaderCorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/header_correoMarginBottom"
        android:gravity="center"
        android:text="@string/nav_header_subtitle_email"
        android:textColor="@color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_layoutSeparadorHeight"
        android:background="@color/black"
        android:orientation="horizontal"></LinearLayout>

</LinearLayout>