<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/alert_dialog_border"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textViewADUsuarioIngresar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/alertDialog_margin"
        android:gravity="center"
        android:textSize="@dimen/titulos_size"
        android:textStyle="bold"
        android:textColor="@color/color_principal"
        android:text="@string/ad_ConfigUsuarioTitulo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/alertDialog_layoutSeparadorHeight"
        android:background="@color/color_principal"
        android:orientation="vertical"></LinearLayout>

    <EditText
        android:id="@+id/editTextUsuarioNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/alertDialog_margin"
        android:textColor="@color/color_principal"
        android:backgroundTint="@color/color_principal"
        android:ems="10"
        android:inputType="textPersonName"
        android:textAlignment="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonADUsuarioCancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/alertDialog_margin"
            android:textColor="@color/white"
            android:background="@drawable/button_inicio"
            android:layout_weight="1"
            android:text="@string/ad_ConfigCancelar" />

        <Button
            android:id="@+id/buttonADUsuarioAceptar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/alertDialog_margin"
            android:textColor="@color/white"
            android:background="@drawable/button_inicio"
            android:layout_weight="1"
            android:text="@string/ad_ConfigAceptar" />
    </LinearLayout>
</LinearLayout>